--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -625,7 +625,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-aos="fade-up" data-aos-delay="1200">
+                        </div>
+                        <div class="menu-down">
+                            <div data-aos="fade-up" data-aos-delay="200">
                                 <div class="menu-type">
                                     <div class="up text20">
                                         <h4 class="color-white">原茶系列</h4>
@@ -672,7 +674,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-aos="fade-up" data-aos-delay="1500">
+                            <div data-aos="fade-up" data-aos-delay="400">
                                 <div class="menu-type">
                                     <div class="up text20">
                                         <h4 class="color-white">茶拿鐵系列</h4>
@@ -737,7 +739,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-aos="fade-up" data-aos-delay="1800">
+                            <div data-aos="fade-up" data-aos-delay="800">
                                 <div class="menu-type">
                                     <div class="up text20">
                                         <h4 class="color-white">黑糖波霸咖啡系列</h4>
