字體小更新

--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -738,7 +738,7 @@
                                 <div class="menu-type">
                                     <div class="up text20">
                                         <h4 class="color-white">黑糖波霸咖啡系列</h4>
-                                        <h4 class="text14 mgt10 color-white mgt10">採用阿拉比卡咖啡豆</h4>
+                                        <h4 class="text14 color-white">採用阿拉比卡咖啡豆</h4>
                                     </div>
                                     <div class="down">
                                         <ul class="gold-border">
@@ -773,7 +773,7 @@
                                             data-src="/images/menu/icon.png" alt="menu_icon">
                                     </div>
                                     <div class="menu-info">
-                                        <h5 class="text18">鮮奶取代奶精</h5>
+                                        <h2 class="text18 ">鮮奶取代奶精</h2>
                                         <p class="text14-4 color-gray text-height">我們以鮮奶取代奶精，提供香醇濃厚的口感，讓你享受飲品的同時營養低負擔
                                         </p>
                                     </div>
@@ -784,7 +784,7 @@
                                             data-src="/images/menu/icon.png" alt="menu_icon">
                                     </div>
                                     <div class="menu-info">
-                                        <h5 class="text18">現煮波霸超Q彈</h5>
+                                        <h2 class="text18">現煮波霸超Q彈</h2>
                                         <p class="text14-4 color-gray text-height">
                                             現煮波霸熱的時候口感偏軟，飲用前建議均勻搖，這樣口感才會Q彈，但如果太久沒喝完，因受冷過久，<br>
                                             就會變得較硬喔!這些都是天然現象，請安心飲用</p>
@@ -796,7 +796,7 @@
                                             data-src="/images/menu/icon.png" alt="menu_icon">
                                     </div>
                                     <div class="menu-info">
-                                        <h5 class="text18">黑糖波霸多層次</h5>
+                                        <h2 class="text18">黑糖波霸多層次</h2>
                                         <p class="text14-4 color-gray text-height">使用獨家虎式黑糖，經由完美比例組合，口感分明層次，香氣十足</p>
                                     </div>
                                 </li>
@@ -806,7 +806,7 @@
                                             data-src="/images/menu/icon.png" alt="menu_icon">
                                     </div>
                                     <div class="menu-info">
-                                        <h5 class="text18">虎式黑糖超濃郁</h5>
+                                        <h2 class="text18">虎式黑糖超濃郁</h2>
                                         <p class="text14-4 color-gray text-height">
                                             每日經由獨家虎式黑糖小火悶熬，口感富有層次感，Q度彈牙適中；入口散發濃郁黑糖香氣</p>
                                     </div>
