--- a/Tiger-Sugar.html
+++ b/Tiger-Sugar.html
@@ -9,7 +9,7 @@
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <!-- swiper css -->
+    <!-- -bu css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
     <!-- bootstrap-icon -->
@@ -142,44 +142,44 @@
             </div>
             <div class="container">
                 <!-- Swiper -->
-                <div class="swiper mySwiper">
+                <div class="swiper mySwiper-social">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><iframe class="card-body"
                                 src="https://www.instagram.com/p/Cq9ZWd9hUSw/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A0%2C%22os%22%3A715.5%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
-                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0"
                                 data-instgrm-payload-id="instagram-media-payload-0" scrolling="no"></iframe></div>
                         <div class="swiper-slide"><iframe class="card-body"
                                 src="https://www.instagram.com/p/Ck3jKhFAVqQ/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A1%2C%22os%22%3A717.3000000119209%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
-                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0"
                                 data-instgrm-payload-id="instagram-media-payload-1" scrolling="no"></iframe></div>
                         <div class="swiper-slide"><iframe class="card-body"
                                 src="https://www.instagram.com/p/CklcJ6FJJf5/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A2%2C%22os%22%3A718.3999999761581%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
-                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0"
                                 data-instgrm-payload-id="instagram-media-payload-2" scrolling="no"></iframe></div>
                         <div class="swiper-slide"><iframe class="card-body"
                                 src="https://www.instagram.com/p/CfWV82HPtL0/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A3%2C%22os%22%3A1361.300000011921%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
-                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0"
                                 data-instgrm-payload-id="instagram-media-payload-3" scrolling="no"></iframe></div>
                         <div class="swiper-slide"><iframe class="card-body"
                                 src="https://www.instagram.com/p/CjpcRW4vGyi/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A4%2C%22os%22%3A1376.5%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
-                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0"
                                 data-instgrm-payload-id="instagram-media-payload-4" scrolling="no"></iframe></div>
                         <div class="swiper-slide"><iframe class="card-body"
                                 src="https://www.instagram.com/p/CgOU1bMMl2F/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A5%2C%22os%22%3A1381.699999988079%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
-                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0"
                                 data-instgrm-payload-id="instagram-media-payload-5" scrolling="no"></iframe></div>
                         <div class="swiper-slide"><iframe class="card-body"
                                 src="https://www.instagram.com/p/CekdlemMFRL/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A6%2C%22os%22%3A1809.3999999761581%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
-                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="556"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0"
                                 data-instgrm-payload-id="instagram-media-payload-6" scrolling="no"></iframe></div>
                         <div class="swiper-slide"><iframe class="card-body"
                                 src="https://www.instagram.com/p/CaBGWBAPCir/embed/?cr=1&amp;v=14&amp;wp=696&amp;rd=https%3A%2F%2Ftigersugar.com&amp;rp=%2F#%7B%22ci%22%3A7%2C%22os%22%3A1824.699999988079%2C%22ls%22%3A418.89999997615814%2C%22le%22%3A430%7D"
-                                allowtransparency="true" allowfullscreen="true" frameborder="0" height="643"
+                                allowtransparency="true" allowfullscreen="true" frameborder="0"
                                 data-instgrm-payload-id="instagram-media-payload-7" scrolling="no"></iframe></div>
                     </div>
                 </div>
             </div>
-            <div class="swiper-button">
+            <div class="swiper-button-social">
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
             </div>
@@ -197,7 +197,7 @@
                 </div>
                 <!-- Swiper -->
                 <div class="card-container">
-                    <div class="swiper mySwiper2">
+                    <div class="swiper mySwiper-product">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="direction-body">
@@ -351,7 +351,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-button2">
+                    <div class="swiper-button-product">
                         <div class="swiper-button-next">
                             <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
                         </div>
@@ -943,7 +943,7 @@
 
             <!-- Swiper -->
             <div class="content">
-                <div class="swiper mySwiper3">
+                <div class="swiper mySwiper-news">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <a target="_blank" href="https://www.popdaily.com.tw/food/962274">
@@ -1149,7 +1149,7 @@
                 </div>
             </div>
 
-            <div class="swiper-button3">
+            <div class="swiper-button-news">
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
             </div>
