--- a/popwindow.html
+++ b/popwindow.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./tigersugaralart.css">
+    <link rel="stylesheet" href="./css/popwindow.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
  
 
@@ -17,7 +17,7 @@
    
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="./tigersugaralart.js"></script>
+    <script src="./js/popwindow.js"></script>
 </body>
 
 </html>
