--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/distribution-confirm.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <!-- 產品經銷項目確認 佑-->
+        <section id="distribution-confirm"></section>
+        <!-- 資料填寫 夫 -->
+        <section id="fillout_area"></section>
+    </div>
 </body>
+
 </html>
