--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -9,12 +9,23 @@
 </head>
 
 <body>
-    <div class="container">
-        <!-- 產品經銷項目確認 佑-->
-        <section id="distribution-confirm"></section>
-        <!-- 資料填寫 夫 -->
-        <section id="fillout_area"></section>
-    </div>
+    <header></header>
+    <main>
+        <!-- 佑 產品經銷項目確認 -->
+        <section id="distribution-confirm">
+            <div class="container">
+
+            </div>
+        </section>
+
+        <!-- 夫 資料填寫 -->
+        <section id="fillout-area">
+            <div class="container">
+
+            </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
