--- a/popwindow.html
+++ b/popwindow.html
@@ -9,12 +9,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/popwindow.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
- 
+
 
 
 <body>
-
-   
+    <div id="pop-window">
+        <div class="container">
+            <div class="pop-window-content">
+                <div class="pop-window-close"></div>
+                <div class="pop-window-header">
+                    <div class="pop-window-title">
+                        <div class="pop-window-title-icon"></div>
+                        <div class="pop-window-title-text">
+                            <div class="pop-window-title-text-chinese">產品介紹</div>
+                            <div class="pop-window-title-text-english">PRODUCT</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./js/popwindow.js"></script>
