--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -6,26 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/distribution-confirm.css">
+    <!-- swiper css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 </head>
 
 <body>
     <header></header>
     <main>
-        <!-- 佑 產品經銷項目確認 -->
-        <section id="distribution-confirm">
-            <div class="container">
+        <div id="distribution_container">
+            <!-- 佑 產品經銷項目確認 -->
+            <section id="distribution-confirm">
+                <div class="container">
+                    <div class="title-area">
+                        <div class="title">
+                            <div class="title-img"></div>
+                            <div class="title-text">
+                                <div class="title-text-top">經銷商品確認</div>
+                                <div class="title-text-bottom">DISTRIBUTION</div>
+                            </div>
+                        </div>
+                        <div class="tiger-sugar-img-area">
+                            <img class="tiger-sugar-img" src="./images/distribution-confirm/bg/join_us.png" alt="">
+                        </div>
+                        <div class="distribution-check">商品經銷項目確認</div>
+                        <div class="title-bottom">
+                        <div #swiperRef="" class="swiper mySwiper-distribution_container">
+                            <div class="swiper-wrapper">
+                              <div class="swiper-slide">全部｜All</div>
+                              <div class="swiper-slide">零食｜Snack</div>
+                              <div class="swiper-slide">冰品｜Ice</div>
+                              <div class="swiper-slide">飲品｜Drink</div>
+                              <div class="swiper-slide">食品｜Food</div>
+                              <div class="swiper-slide">甜點｜dessert</div>
+                            </div>
+                            <div class="swiper-button-distribution_container">
+                                <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
+                                    <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
+                                </div>
+                                <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
+                                    <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
+                                </div>
+                            </div>
+                          </div>
+                        <button type="button" class="delete-all btn">全部刪除</button>
+                    </div>
+                    </div>
+                    <!-- swiper -->
+                    <div class="content-area">
+                        <div class="card-container">
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-            </div>
-        </section>
+            <!-- 夫 資料填寫 -->
+            <section id="fillout-area">
+                <div class="container">
 
-        <!-- 夫 資料填寫 -->
-        <section id="fillout-area">
-            <div class="container">
-
-            </div>
-        </section>
+                </div>
+            </section>
+        </div>
     </main>
     <footer></footer>
+
+    <!-- swiper js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="./js/swiperJS.js"></script>
 </body>
 
 </html>
