增加產品經銷

--- a/distribution.html
+++ b/distribution.html
@@ -4,8 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/extra-distribution.css">
 </head>
 <body>
-    
+    <!-- nav bar -->
+    <header></header>
+    <!-- 內容頁 -->
+    <section>
+        <div class="main">
+            <div class="container">
+                <div class="distribution-nav">
+                    <div class="distribution-logo-group">
+                        <div>
+                            <img src="/img/distribution.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- footer -->
+    <footer></footer>
 </body>
 </html>
