distribution-confirm  content架構建設中

--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -51,9 +51,31 @@
                         <button type="button" class="delete-all btn">全部刪除</button>
                     </div>
                     </div>
-                    <!-- swiper -->
                     <div class="content-area">
                         <div class="card-container">
+                            <div class="direction-body">
+                                <div class="img-w-h-border-img">
+                                    <img class="product-img"
+                                        src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg"
+                                        alt="">
+                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                    <div class="product-img-hover">
+                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                        <a href="" class="commodity-more-button btn-more">
+                                            MORE
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="commodity-title">
+                                    老虎堂地瓜條
+                                </div>
+                                <div class="commodity-title-english">
+                                    Tiger Sugar Sweet Potato Fries
+                                </div>
+                                <div class="commodity-sort">
+                                    零食｜Snack
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
