--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -30,34 +30,36 @@
                         </div>
                         <div class="distribution-check">商品經銷項目確認</div>
                         <div class="title-bottom">
-                        <div #swiperRef="" class="swiper mySwiper-distribution_container">
-                            <div class="swiper-wrapper">
-                              <div class="swiper-slide">全部｜All</div>
-                              <div class="swiper-slide">零食｜Snack</div>
-                              <div class="swiper-slide">冰品｜Ice</div>
-                              <div class="swiper-slide">飲品｜Drink</div>
-                              <div class="swiper-slide">食品｜Food</div>
-                              <div class="swiper-slide">甜點｜dessert</div>
-                            </div>
-                            <div class="swiper-button-distribution_container">
-                                <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
-                                    <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
+                            <div #swiperRef="" class="swiper mySwiper-distribution_container">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">全部｜All</div>
+                                    <div class="swiper-slide">零食｜Snack</div>
+                                    <div class="swiper-slide">冰品｜Ice</div>
+                                    <div class="swiper-slide">飲品｜Drink</div>
+                                    <div class="swiper-slide">食品｜Food</div>
+                                    <div class="swiper-slide">甜點｜dessert</div>
                                 </div>
-                                <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
-                                    <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
+                                <div class="swiper-button-distribution_container">
+                                    <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
+                                        aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
+                                        <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
+                                    </div>
+                                    <div class="swiper-button-prev" tabindex="0" role="button"
+                                        aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1"
+                                        aria-disabled="false">
+                                        <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
+                                    </div>
                                 </div>
                             </div>
-                          </div>
-                        <button type="button" class="delete-all btn">全部刪除</button>
-                    </div>
+                            <button type="button" class="delete-all btn">全部刪除</button>
+                        </div>
                     </div>
                     <div class="content-area">
                         <div class="card-container">
                             <div class="direction-body">
                                 <div class="img-w-h-border-img">
                                     <img class="product-img"
-                                        src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg"
-                                        alt="">
+                                        src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="">
                                     <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
                                     <div class="product-img-hover">
                                         <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
@@ -84,7 +86,28 @@
             <!-- 夫 資料填寫 -->
             <section id="fillout-area">
                 <div class="container">
-
+                    <div class="title">
+                        <div class="title-img"></div>
+                        <div class="title-text">
+                            <div class="title-text-top">資料填寫</div>
+                            <div class="title-text-bottom">DISTRIBUTION</div>
+                        </div>
+                    </div>
+                    <div class="basic-info-fillout">
+                        <div class="title">經銷商基本資料填寫</div>
+                        <div class="fillout">
+                            <form action="">
+                                <input type="text">
+                            </form>
+                        </div>
+                    </div>
+                    <div class="sales-fillout">
+                        <div class="title">經銷商販售方式填寫
+                        </div>
+                        <div class="fillout">
+                            <form action=""></form>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
