--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -13,7 +13,7 @@
 <body>
     <header></header>
     <main>
-        <div id="distribution_container">
+        <div id="distribution-container">
             <!-- 佑 產品經銷項目確認 -->
             <section id="distribution-confirm">
                 <div class="container">
@@ -30,7 +30,7 @@
                         </div>
                         <div class="distribution-check">商品經銷項目確認</div>
                         <div class="title-bottom">
-                        <div #swiperRef="" class="swiper mySwiper-distribution_container">
+                        <div #swiperRef="" class="swiper mySwiper-distribution-container">
                             <div class="swiper-wrapper">
                               <div class="swiper-slide">全部｜All</div>
                               <div class="swiper-slide">零食｜Snack</div>
@@ -39,7 +39,7 @@
                               <div class="swiper-slide">食品｜Food</div>
                               <div class="swiper-slide">甜點｜dessert</div>
                             </div>
-                            <div class="swiper-button-distribution_container">
+                            <div class="swiper-button-distribution-container">
                                 <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
                                     <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
                                 </div>
