回歸我的部分

--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -13,7 +13,7 @@
 <body>
     <header></header>
     <main>
-        <div id="distribution_container">
+        <div id="distribution-container">
             <!-- 佑 產品經銷項目確認 -->
             <section id="distribution-confirm">
                 <div class="container">
@@ -30,36 +30,7 @@
                         </div>
                         <div class="distribution-check">商品經銷項目確認</div>
                         <div class="title-bottom">
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <div #swiperRef="" class="swiper mySwiper-distribution-container">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">全部｜All</div>
-                                    <div class="swiper-slide">零食｜Snack</div>
-                                    <div class="swiper-slide">冰品｜Ice</div>
-                                    <div class="swiper-slide">飲品｜Drink</div>
-                                    <div class="swiper-slide">食品｜Food</div>
-                                    <div class="swiper-slide">甜點｜dessert</div>
-                                </div>
-                                <div class="swiper-button-distribution-container">
-                                    <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
-                                        aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
-                                        <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
-                                    </div>
-                                    <div class="swiper-button-distribution_container">
-                                        <div class="swiper-button-next" tabindex="0" role="button"
-                                            aria-label="Next slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1"
-                                            aria-disabled="false">
-                                            <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
-                                        </div>
-                                        <div class="swiper-button-prev" tabindex="0" role="button"
-                                            aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1"
-                                            aria-disabled="false">
-                                            <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
-                                        </div>
-                                    </div>
-=======
-                        <div #swiperRef="" class="swiper mySwiper-distribution_container">
+                        <div #swiperRef="" class="swiper mySwiper-distribution-container">
                             <div class="swiper-wrapper">
                               <div class="swiper-slide">全部｜All</div>
                               <div class="swiper-slide">零食｜Snack</div>
@@ -68,53 +39,7 @@
                               <div class="swiper-slide">食品｜Food</div>
                               <div class="swiper-slide">甜點｜dessert</div>
                             </div>
-                            <div class="swiper-button-distribution_container">
-                                <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
-                                    <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
-                                </div>
-                                <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
-                                    <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
->>>>>>> parent of a284b77 (先做一些)
-                                </div>
-                                <button type="button" class="delete-all btn">全部刪除</button>
-                            </div>
-<<<<<<< HEAD
-                        </div>
-                        <div class="content-area">
-                            <div class="card-container">
-                                <div class="direction-body">
-                                    <div class="img-w-h-border-img">
-                                        <img class="product-img"
-                                            src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg"
-                                            alt="">
-                                        <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
-                                        <div class="product-img-hover">
-                                            <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
-                                            <a href="" class="commodity-more-button btn-more">
-                                                MORE
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="commodity-title">
-                                        老虎堂地瓜條
-                                    </div>
-                                    <div class="commodity-title-english">
-                                        Tiger Sugar Sweet Potato Fries
-                                    </div>
-                                    <div class="commodity-sort">
-                                        零食｜Snack
-=======
-=======
-                        <div #swiperRef="" class="swiper mySwiper-distribution_container">
-                            <div class="swiper-wrapper">
-                              <div class="swiper-slide">全部｜All</div>
-                              <div class="swiper-slide">零食｜Snack</div>
-                              <div class="swiper-slide">冰品｜Ice</div>
-                              <div class="swiper-slide">飲品｜Drink</div>
-                              <div class="swiper-slide">食品｜Food</div>
-                              <div class="swiper-slide">甜點｜dessert</div>
-                            </div>
-                            <div class="swiper-button-distribution_container">
+                            <div class="swiper-button-distribution-container">
                                 <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
                                     <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
                                 </div>
@@ -122,7 +47,6 @@
                                     <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
                                 </div>
                             </div>
->>>>>>> parent of a284b77 (先做一些)
                           </div>
                         <button type="button" class="delete-all btn">全部刪除</button>
                     </div>
@@ -140,12 +64,21 @@
                                         <a href="" class="commodity-more-button btn-more">
                                             MORE
                                         </a>
->>>>>>> parent of a284b77 (先做一些)
                                     </div>
+                                </div>
+                                <div class="commodity-title">
+                                    老虎堂地瓜條
+                                </div>
+                                <div class="commodity-title-english">
+                                    Tiger Sugar Sweet Potato Fries
+                                </div>
+                                <div class="commodity-sort">
+                                    零食｜Snack
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
             </section>
 
             <!-- 夫 資料填寫 -->
