--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -86,7 +86,28 @@
             <!-- 夫 資料填寫 -->
             <section id="fillout-area">
                 <div class="container">
-
+                    <div class="title">
+                        <div class="title-img"></div>
+                        <div class="title-text">
+                            <div class="title-text-top">資料填寫</div>
+                            <div class="title-text-bottom">DISTRIBUTION</div>
+                        </div>
+                    </div>
+                    <div class="basic-info-fillout">
+                        <div class="title">經銷商基本資料填寫</div>
+                        <div class="fillout">
+                            <form action="">
+                                <input type="text">
+                            </form>
+                        </div>
+                    </div>
+                    <div class="sales-fillout">
+                        <div class="title">經銷商販售方式填寫
+                        </div>
+                        <div class="fillout">
+                            <form action=""></form>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
