--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -97,7 +97,16 @@
                         <div class="title">經銷商基本資料填寫</div>
                         <div class="fillout">
                             <form action="">
-                                <input type="text">
+                                姓名｜Name
+                                <input type="text" placeholder="姓名">
+                                出生年月日｜Birthday
+                                <input type="date" placeholder="yyyy/月/dd">
+                                電子信箱｜Email
+                                <input type="email" placeholder="電子信箱">
+                                聯絡電話｜Phone
+                                <input type="number" placeholder="聯絡電話">
+                                聯絡地址｜Address
+                                <input type="text" placeholder="聯絡地址">
                             </form>
                         </div>
                     </div>
@@ -105,7 +114,21 @@
                         <div class="title">經銷商販售方式填寫
                         </div>
                         <div class="fillout">
-                            <form action=""></form>
+                            <form action="">
+                                
+                                <label for="channel">經銷通路｜Sales Channel</label>
+                                <select id="channel">
+                                    <option value="commerce">網路電商 E-Commerce</option>
+                                    <option value="convenience">便利商店 Concenience Store</option>
+                                    <option value="supermarket">超市 Supermarket</option>
+                                    <option value="hypermarket">大賣店 Hypermarket</option>
+                                </select>
+
+                                <label for="country">預定經銷國家｜Distirbution Area</label>
+                                
+                                <div>其他｜Other</div>
+                                <input type="text" placeholder="其他">
+                            </form>
                         </div>
                     </div>
                 </div>
