--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -60,9 +60,9 @@
                                 <div class="img-w-h-border-img">
                                     <img class="product-img"
                                         src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="">
-                                    <img class="ask-icon" src="./img/add_for_ask.svg" alt="">
+                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
                                     <div class="product-img-hover">
-                                        <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="">
+                                        <img class="ask-icon-hover" src="./images/distribution-confirm/icon/delete_hover.svg" alt="">
                                         <a href="" class="commodity-more-button btn-more">
                                             MORE
                                         </a>
