--- a/popwindow.html
+++ b/popwindow.html
@@ -29,8 +29,20 @@
                 <div class="product-information-content">
                     <div class="product-information-swiper">
 
-                        <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff"
-                            class="swiper mySwiper2">
+                        <div thumbsSlider="" class="swiper mySwiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper mySwiper2 swiper-style">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
@@ -45,19 +57,6 @@
                             <div class="swiper-button-next"></div>
                             <div class="swiper-button-prev"></div>
                         </div>
-                        <!-- <div thumbsSlider="" class="swiper mySwiper">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-                                </div>
-                                <div class="swiper-slide">
-                                    <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-                                </div>
-                            </div>
-                        </div> -->
 
 
                     </div>
@@ -100,8 +99,8 @@
     </div>
 
 
-    <script src="./js/popwindow.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="./js/popwindow.js"></script>
 
 </body>
 
