--- a/distribution.html
+++ b/distribution.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/css/extra-distribution.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <!-- nav bar -->
@@ -46,12 +49,119 @@
             </div>
             <!-- 頁面數 -->
             <div class="page-up-and-page-down-group">
-                <button>上一頁</button>
-                <button>1</button>
-                <button>2</button>
-                <button>下一頁</button>
+              <button class="page-up" type="button">上一頁</button>
+              <button class="page-1" type="button">1</button>
+              <button class="page-2" type="button">2</button>
+              <button class="page-down" type="button">下一頁</button>
             </div>
           </div>
+          <!-- 產品方格 -->
+          <div class="product-group">
+            <div class="product-background">
+              <div class="product">
+                <img
+                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                  alt="產品1"
+                />
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="product-group">
+            <div class="product-background">
+              <div class="product">
+                <img
+                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                  alt="產品1"
+                />
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="product-group">
+            <div class="product-background">
+              <div class="product">
+                <img
+                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                  alt="產品1"
+                />
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="product-group">
+            <div class="product-background">
+              <div class="product">
+                <img
+                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                  alt="產品1"
+                />
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="product-group">
+            <div class="product-background">
+              <div class="product">
+                <img
+                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                  alt="產品1"
+                />
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">Tiger Cheese Filling Black Sugar Ice Cream Bar</div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="product-group">
+            <div class="product-background">
+              <div class="product">
+                <img
+                  src="/images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
+                  alt="產品1"
+                />
+              </div>
+              <div class="product-info">
+                <div class="product-title">老虎芝士流心雪糕</div>
+                <div class="product-title-en">
+                  Tiger Cheese Filling Black Sugar Ice Cream Bar
+                </div>
+                <div class="product-id">冰品 | Ice</div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
