distribution-confirm 完成

--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -39,23 +39,23 @@
                                     <div class="swiper-slide">食品｜Food</div>
                                     <div class="swiper-slide">甜點｜dessert</div>
                                 </div>
-                                <div class="swiper-button-distribution-container">
-                                    <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
-                                        aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
-                                        <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
-                                    </div>
-                                    <div class="swiper-button-prev" tabindex="0" role="button"
-                                        aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1"
-                                        aria-disabled="false">
-                                        <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
-                                    </div>
+                            </div>
+                            <div class="swiper-button-distribution-container">
+                                <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
+                                    aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
+                                    <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
+                                </div>
+                                <div class="swiper-button-prev" tabindex="0" role="button"
+                                    aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1"
+                                    aria-disabled="false">
+                                    <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
                                 </div>
                             </div>
                             <button type="button" class="delete-all btn">全部刪除</button>
                         </div>
                     </div>
                     <ul class="pagination-top">
-                        <li class="page-item disabled">
+                        <li class="page-item-prev">
                             <a class="page-link" href="">
                                 <img src="./images/distribution-confirm/icon/previous.png" alt="">
                                 上一頁
@@ -64,14 +64,14 @@
                         <li class="page-item active">
                             <a class="page-link" href="">1</a>
                         </li>
-                        <li class="page-item disabled">
+                        <li class="page-item-next">
                             <a class="page-link" href="">
                                 下一頁
                                 <img src="./images/distribution-confirm/icon/next.png" alt="">
                             </a>
                         </li>
                     </ul>
-                    <hr class="distribution_line">
+                    <hr class="distribution-line">
                     <div class="content-area">
                         <div class="card-container">
                             <div class="direction-body">
@@ -214,9 +214,9 @@
                             </div>
                         </div>
                     </div>
-                    <hr class="distribution_line_down">
+                    <hr class="distribution-line-down">
                     <ul class="pagination-down">
-                        <li class="page-item disabled">
+                        <li class="page-item-prev">
                             <a class="page-link" href="">
                                 <img src="./images/distribution-confirm/icon/previous.png" alt="">
                                 上一頁
@@ -225,7 +225,7 @@
                         <li class="page-item active">
                             <a class="page-link" href="">1</a>
                         </li>
-                        <li class="page-item disabled">
+                        <li class="page-item-next">
                             <a class="page-link" href="">
                                 下一頁
                                 <img src="./images/distribution-confirm/icon/next.png" alt="">
