--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -62,7 +62,8 @@
                                         src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="">
                                     <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
                                     <div class="product-img-hover">
-                                        <img class="ask-icon-hover" src="./images/distribution-confirm/icon/delete_hover.svg" alt="">
+                                        <img class="ask-icon-hover"
+                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="">
                                         <a href="" class="commodity-more-button btn-more">
                                             MORE
                                         </a>
@@ -97,27 +98,39 @@
                         <div class="title">經銷商基本資料填寫</div>
                         <div class="fillout">
                             <form action="">
-                                姓名｜Name
-                                <input type="text" placeholder="姓名">
-                                出生年月日｜Birthday
-                                <input type="date" placeholder="yyyy/月/dd">
-                                電子信箱｜Email
-                                <input type="email" placeholder="電子信箱">
-                                聯絡電話｜Phone
-                                <input type="number" placeholder="聯絡電話">
-                                聯絡地址｜Address
-                                <input type="text" placeholder="聯絡地址">
+                                <div class="">
+                                    <div>
+                                        <div>姓名｜Name</div>
+                                        <input type="text" placeholder="姓名">
+                                    </div>
+                                    <div>
+                                        <div>出生年月日｜Birthday</div>
+                                        <input type="date" placeholder="yyyy/月/dd">
+                                    </div>
+                                </div>
+                                <div>
+                                    <div>電子信箱｜Email</div>
+                                    <input type="email" placeholder="電子信箱">
+                                </div>
+                                <div>
+                                    <div>聯絡電話｜Phone</div>
+                                    <input type="number" placeholder="聯絡電話">
+                                </div>
+                                <div>
+                                    <div>聯絡地址｜Address</div>
+                                    <input type="text" placeholder="聯絡地址">
+                                </div>
                             </form>
                         </div>
                     </div>
                     <div class="sales-fillout">
-                        <div class="title">經銷商販售方式填寫
-                        </div>
+                        <div class="title">經銷商販售方式填寫</div>
                         <div class="fillout">
                             <form action="">
-                                
+
                                 <label for="channel">經銷通路｜Sales Channel</label>
                                 <select id="channel">
+                                    <option value="commerce" disabled selected>----請選擇</option>
                                     <option value="commerce">網路電商 E-Commerce</option>
                                     <option value="convenience">便利商店 Concenience Store</option>
                                     <option value="supermarket">超市 Supermarket</option>
@@ -125,7 +138,13 @@
                                 </select>
 
                                 <label for="country">預定經銷國家｜Distirbution Area</label>
-                                
+                                <select id="country">
+                                    <option value="america">America</option>
+                                    <option value="california">California</option>
+                                    <option value="canada">Canada</option>
+                                    <option value="taiwan" selected>Taiwan</option>
+                                </select>
+
                                 <div>其他｜Other</div>
                                 <input type="text" placeholder="其他">
                             </form>
